--- a/libxfce4panel/libxfce4panel-config.h.in
+++ b/libxfce4panel/libxfce4panel-config.h.in
@@ -27,10 +27,46 @@
 
 G_BEGIN_DECLS
 
+/**
+ * LIBXFCE4PANEL_MAJOR_VERSION:
+ * 
+ * The major version number of the libxfce4panel library.
+ * Like libxfce4panel_major_version, but from the headers used at 
+ * application compile time, rather than from the library 
+ * linked against at application run time.
+ **/
 #define LIBXFCE4PANEL_MAJOR_VERSION (@LIBXFCE4PANEL_VERSION_MAJOR@)
+
+/**
+ * LIBXFCE4PANEL_MINOR_VERSION:
+ * 
+ * The minor version number of the libxfce4panel library.
+ * Like libxfce4panel_minor_version, but from the headers used at 
+ * application compile time, rather than from the library 
+ * linked against at application run time.
+ **/
 #define LIBXFCE4PANEL_MINOR_VERSION (@LIBXFCE4PANEL_VERSION_MINOR@)
+
+/**
+ * LIBXFCE4PANEL_MICRO_VERSION:
+ * 
+ * The micro version number of the libxfce4panel library.
+ * Like libxfce4panel_micro_version, but from the headers used at 
+ * application compile time, rather than from the library 
+ * linked against at application run time
+ **/
 #define LIBXFCE4PANEL_MICRO_VERSION (@LIBXFCE4PANEL_VERSION_MICRO@)
 
+/**
+ * LIBXFCE4PANEL_CHECK_VERSION:
+ * @major : the major version number.
+ * @minor : the minor version number.
+ * @micro : the micro version number.
+ * 
+ * Checks the version of the libxfce4panel library. Returns
+ * %TRUE if the version of the libxfce4panel header files is
+ * the same as or newer than the passed-in version.
+ **/
 #define LIBXFCE4PANEL_CHECK_VERSION(major,minor,micro) \
   (LIBXFCE4PANEL_MAJOR_VERSION > (major) \
    || (LIBXFCE4PANEL_MAJOR_VERSION == (major) \
