--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -42,7 +42,7 @@ panel/panel-plugin-external.c
 panel/panel-plugin-external.h
 panel/panel-preferences-dialog.c
 panel/panel-preferences-dialog.h
-panel/panel-preferences-dialog.ui
+panel/panel-preferences-dialog.glade
 panel/panel-window.c
 panel/panel-window.h
 
@@ -52,7 +52,7 @@ wrapper/wrapper-module.h
 wrapper/wrapper-plug.c
 wrapper/wrapper-plug.h
 
-plugins/actions/actions-dialog.ui
+plugins/actions/actions-dialog.glade
 plugins/actions/actions.c
 plugins/actions/actions.desktop.in
 plugins/actions/actions.h
@@ -61,7 +61,7 @@ plugins/clock/clock-analog.c
 plugins/clock/clock-analog.h
 plugins/clock/clock-binary.c
 plugins/clock/clock-binary.h
-plugins/clock/clock-dialog.ui
+plugins/clock/clock-dialog.glade
 plugins/clock/clock-digital.c
 plugins/clock/clock-digital.h
 plugins/clock/clock-fuzzy.c
@@ -74,17 +74,17 @@ plugins/clock/clock.h
 
 plugins/launcher/launcher-dialog.c
 plugins/launcher/launcher-dialog.h
-plugins/launcher/launcher-dialog.ui
+plugins/launcher/launcher-dialog.glade
 plugins/launcher/launcher.c
 plugins/launcher/launcher.desktop.in
 plugins/launcher/launcher.h
 
-plugins/pager/pager-dialog.ui
+plugins/pager/pager-dialog.glade
 plugins/pager/pager.c
 plugins/pager/pager.desktop.in
 plugins/pager/pager.h
 
-plugins/separator/separator-dialog.ui
+plugins/separator/separator-dialog.glade
 plugins/separator/separator.c
 plugins/separator/separator.desktop.in
 plugins/separator/separator.h
@@ -95,7 +95,7 @@ plugins/showdesktop/showdesktop.h
 
 plugins/systray/systray-box.c
 plugins/systray/systray-box.h
-plugins/systray/systray-dialog.ui
+plugins/systray/systray-dialog.glade
 plugins/systray/systray-manager.c
 plugins/systray/systray-manager.h
 plugins/systray/systray-marshal.list
@@ -105,13 +105,13 @@ plugins/systray/systray.c
 plugins/systray/systray.desktop.in
 plugins/systray/systray.h
 
-plugins/tasklist/tasklist-dialog.ui
+plugins/tasklist/tasklist-dialog.glade
 plugins/tasklist/tasklist-widget.c
 plugins/tasklist/tasklist-widget.h
 plugins/tasklist/tasklist.c
 plugins/tasklist/tasklist.desktop.in
 
-plugins/windowmenu/windowmenu-dialog.ui
+plugins/windowmenu/windowmenu-dialog.glade
 plugins/windowmenu/windowmenu.c
 plugins/windowmenu/windowmenu.desktop.in
 plugins/windowmenu/windowmenu.h
