Don't send a value with the window menu popup event.

--- a/plugins/windowmenu/xfce4-popup-windowmenu.in
+++ b/plugins/windowmenu/xfce4-popup-windowmenu.in
@@ -17,6 +17,6 @@
 # Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA
 #
 
-exec @bindir@/xfce4-panel --plugin-event=windowmenu:popup:bool:true
+exec @bindir@/xfce4-panel --plugin-event=windowmenu:popup
 
 # vim:set ts=2 sw=2 et ai:
