--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,13 +2,13 @@ panel-desktop-handler.desktop.in
 panel-preferences.desktop.in
 
 libxfce4panel/libxfce4panel.h
+libxfce4panel/libxfce4panel-enums.h
 libxfce4panel/xfce-arrow-button.c
 libxfce4panel/xfce-arrow-button.h
 libxfce4panel/xfce-hvbox.c
 libxfce4panel/xfce-hvbox.h
 libxfce4panel/xfce-panel-convenience.c
 libxfce4panel/xfce-panel-convenience.h
-libxfce4panel/xfce-panel-enums.h
 libxfce4panel/xfce-panel-image.c
 libxfce4panel/xfce-panel-image.h
 libxfce4panel/xfce-panel-macros.h
@@ -24,7 +24,6 @@ panel/panel-base-window.c
 panel/panel-base-window.h
 panel/panel-dbus-client.c
 panel/panel-dbus-client.h
-panel/panel-dbus-service-infos.xml
 panel/panel-dbus-service.c
 panel/panel-dbus-service.h
 panel/panel-dialogs.c
@@ -33,13 +32,14 @@ panel/panel-item-dialog.c
 panel/panel-item-dialog.h
 panel/panel-itembar.c
 panel/panel-itembar.h
-panel/panel-marshal.list
 panel/panel-module-factory.c
 panel/panel-module-factory.h
 panel/panel-module.c
 panel/panel-module.h
 panel/panel-plugin-external.c
 panel/panel-plugin-external.h
+panel/panel-plugin-external-46.c
+panel/panel-plugin-external-46.h
 panel/panel-preferences-dialog.c
 panel/panel-preferences-dialog.h
 panel/panel-preferences-dialog.glade
