Add some internal support for debugging.
Internal function for debugging support. It supports debug
domain filtering through the PANEL_DEBUG environment variable
(PANEL_DEBUG=1 for all debug output and for example
PANEL_DEBUG=positining:struts for only the positioning and struts
debug messages.

For now this is always enabled (ie. compiled) so everyone can easily
give me debug output without recompiling.

--- a/common/Makefile.am
+++ b/common/Makefile.am
@@ -9,6 +9,8 @@ noinst_LTLIBRARIES = \
 	libpanel-common.la
 
 libpanel_common_la_SOURCES = \
+	panel-debug.c \
+	panel-debug.h \
 	panel-builder.c \
 	panel-builder.h \
 	panel-xfconf.c \
