Add new plugin directory menu.
Plugin to walk to a directory tree using a menu. Folders
are loaded on the fly and desktop files are handled
like menu items (unix only).
It is also possible to set a file pattern to allow files
in the menu (instead of only directories). The files are
opened in the default handler.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -72,6 +72,9 @@ plugins/clock/clock.c
 plugins/clock/clock.desktop.in
 plugins/clock/clock.h
 
+plugins/directorymenu/directorymenu.c
+plugins/directorymenu/directorymenu.desktop.in
+
 plugins/launcher/launcher-dialog.c
 plugins/launcher/launcher-dialog.h
 plugins/launcher/launcher-dialog.glade
