--- a/configure.ac.in
+++ b/configure.ac.in
@@ -111,10 +111,17 @@ XDT_CHECK_PACKAGE([XFCONF], [libxfconf-0], [4.7.1])
 XDT_CHECK_PACKAGE([EXO], [exo-1], [0.5.1])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.14.0])
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.18.0])
+XDT_CHECK_PACKAGE([GIO], [gio-2.0], [2.18.0])
 XDT_CHECK_PACKAGE([GMODULE], [gmodule-2.0], [2.18.0])
 XDT_CHECK_PACKAGE([DBUS], [dbus-glib-1], [0.73])
 XDT_CHECK_PACKAGE([CAIRO], [cairo], [1.0.0])
 XDT_CHECK_PACKAGE([LIBWNCK], [libwnck-1.0], [2.22])
+
+dnl **********************************
+dnl *** Optional GIO UNIX features ***
+dnl **********************************
+XDT_CHECK_OPTIONAL_PACKAGE([GIO_UNIX], [gio-unix-2.0],
+                           [2.18.0], [gio-unix], [GIO UNIX features])
 
 dnl *************************
 dnl *** Check for gtk-doc ***
@@ -199,6 +206,7 @@ wrapper/Makefile
 plugins/Makefile
 plugins/actions/Makefile
 plugins/clock/Makefile
+plugins/directorymenu/Makefile
 plugins/launcher/Makefile
 plugins/pager/Makefile
 plugins/separator/Makefile
