Rename Task List to Window Buttons.

--- a/plugins/tasklist/tasklist.desktop.in
+++ b/plugins/tasklist/tasklist.desktop.in
@@ -1,7 +1,7 @@
 [Xfce Panel]
 Type=X-XFCE-PanelPlugin
 Encoding=UTF-8
-_Name=Task List
+_Name=Window Buttons
 _Comment=Switch between open windows using buttons
 Icon=preferences-system-windows
 X-XFCE-Module=tasklist
