Add new application menu plugin.
Garcon based menu plugin. Basically works the same as
the plugin in xfdesktop, with an  additional option
to show the generic names in the menu.

Also extend the migration program to migrate from the
xfdesktop menu to the panel menu.

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -212,6 +212,7 @@ panel/Makefile
 wrapper/Makefile
 plugins/Makefile
 plugins/actions/Makefile
+plugins/applicationsmenu/Makefile
 plugins/clock/Makefile
 plugins/directorymenu/Makefile
 plugins/launcher/Makefile
