--- a/icons/48x48/Makefile.am
+++ b/icons/48x48/Makefile.am
@@ -1,7 +1,8 @@
 
 iconsdir = $(datadir)/icons/hicolor/48x48/apps
 icons_DATA = \
-	xfce4-panel.png
+	xfce4-panel.png \
+	xfce4-panel-menu.png
 
 EXTRA_DIST = \
 	$(icons_DATA)
