--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -57,6 +57,10 @@ plugins/actions/actions.c
 plugins/actions/actions.desktop.in
 plugins/actions/actions.h
 
+plugins/actions/applicationsmenu-dialog.glade
+plugins/actions/applicationsmenu.c
+plugins/actions/applicationsmenu.desktop.in
+
 plugins/clock/clock-analog.c
 plugins/clock/clock-analog.h
 plugins/clock/clock-binary.c
