Add xfce4-panel icons.

--- a/panel-preferences.desktop.in
+++ b/panel-preferences.desktop.in
@@ -3,7 +3,7 @@
 Encoding=UTF-8
 Version=1.0
 Exec=xfce4-panel -p
-Icon=preferences-system
+Icon=xfce4-panel
 Type=Application
 Categories=X-XFCE;Settings;DesktopSettings;
 OnlyShowIn=XFCE;
