--- a/configure.ac.in
+++ b/configure.ac.in
@@ -197,6 +197,13 @@ common/Makefile
 docs/Makefile
 docs/references/Makefile
 docs/references/version.xml
+icons/Makefile
+icons/16x16/Makefile
+icons/22x22/Makefile
+icons/24x24/Makefile
+icons/32x32/Makefile
+icons/48x48/Makefile
+icons/scalable/Makefile
 libxfce4panel/Makefile
 libxfce4panel/libxfce4panel-1.0.pc
 libxfce4panel/libxfce4panel-config.h
