Add directory menu glade file to POTFILES.in.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -74,6 +74,7 @@ plugins/clock/clock.h
 
 plugins/directorymenu/directorymenu.c
 plugins/directorymenu/directorymenu.desktop.in
+plugins/directorymenu/directorymenu-dialog.glade
 
 plugins/launcher/launcher-dialog.c
 plugins/launcher/launcher-dialog.h
