API docs and dist errors.
Finish the API docs and fix some warnings
that prevented to build a dist tarball. Also add some
macros to make sure we contain all the 4.6 API.

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -1,9 +1,11 @@
 SUBDIRS = \
 	references
 
-docdir = $(datadir)/doc/xfce4/Panel
 doc_DATA = \
 	README.gtkrc-2.0 \
 	README.libxfce4panel
+
+EXTRA_DIST = \
+	$(doc_DATA)
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
