--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -52,6 +52,8 @@ wrapper/wrapper-module.h
 wrapper/wrapper-plug.c
 wrapper/wrapper-plug.h
 
+migrate/main.c
+
 plugins/actions/actions-dialog.glade
 plugins/actions/actions.c
 plugins/actions/actions.desktop.in
