--- a/libxfce4panel/libxfce4panel-config.h.in
+++ b/libxfce4panel/libxfce4panel-config.h.in
@@ -34,6 +34,8 @@ G_BEGIN_DECLS
  * Like libxfce4panel_major_version, but from the headers used at
  * application compile time, rather than from the library
  * linked against at application run time.
+ * 
+ * Since: 4.8
  **/
 #define LIBXFCE4PANEL_MAJOR_VERSION (@LIBXFCE4PANEL_VERSION_MAJOR@)
 
@@ -44,6 +46,8 @@ G_BEGIN_DECLS
  * Like libxfce4panel_minor_version, but from the headers used at
  * application compile time, rather than from the library
  * linked against at application run time.
+ * 
+ * Since: 4.8
  **/
 #define LIBXFCE4PANEL_MINOR_VERSION (@LIBXFCE4PANEL_VERSION_MINOR@)
 
@@ -54,6 +58,8 @@ G_BEGIN_DECLS
  * Like libxfce4panel_micro_version, but from the headers used at
  * application compile time, rather than from the library
  * linked against at application run time
+ * 
+ * Since: 4.8
  **/
 #define LIBXFCE4PANEL_MICRO_VERSION (@LIBXFCE4PANEL_VERSION_MICRO@)
 
@@ -67,6 +73,8 @@ G_BEGIN_DECLS
  *
  * Returns: %TRUE if the version of the libxfce4panel header files is
  *          the same as or newer than the passed-in version.
+ * 
+ * Since: 4.8
  **/
 #define LIBXFCE4PANEL_CHECK_VERSION(major,minor,micro) \
   (LIBXFCE4PANEL_MAJOR_VERSION > (major) \
