--- a/docs/manual/figures/Makefile.am
+++ b/docs/manual/figures/Makefile.am
@@ -1,5 +1,17 @@
 imagesdir = $(docdir)/html/C/figures
-images_DATA = 
+images_DATA = \
+	actions.png \
+	add-new-items.png \
+	applicationsmenu.png \
+	clock.png \
+	directorymenu.png \
+	launcher.png \
+	pager.png \
+	preferences.png \
+	separator.png \
+	systray.png \
+	tasklist.png \
+	windowmenu.png
 
 EXTRA_DIST = \
 	$(images_DATA)
