--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,8 @@
 panel-desktop-handler.desktop.in
 panel-preferences.desktop.in
 
+common/panel-builder.c
+
 libxfce4panel/libxfce4panel.h
 libxfce4panel/libxfce4panel-enums.h
 libxfce4panel/xfce-arrow-button.c
