--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,7 +1,7 @@
 panel-desktop-handler.desktop.in
 panel-preferences.desktop.in
 
-common/panel-builder.c
+common/panel-utils.c
 
 libxfce4panel/xfce-arrow-button.c
 libxfce4panel/xfce-hvbox.c
