--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,7 @@ desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 .PHONY: ChangeLog
 
 ChangeLog: Makefile
-	(GIT_DIR=$(top_srcdir)/.git git log > .changelog.tmp \
+	(GIT_DIR=$(top_srcdir)/.git git log xfce-4.6-master..HEAD > .changelog.tmp \
 	&& mv .changelog.tmp ChangeLog; rm -f .changelog.tmp) \
 	|| (touch ChangeLog; echo 'Git directory not found: installing possibly empty changelog.' >&2)
 
