--- a/configure.in.in
+++ b/configure.in.in
@@ -112,7 +112,8 @@ XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.10.0])
 XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.12.0])
 XDT_CHECK_PACKAGE([GMODULE], [gmodule-2.0], [2.12.0])
 XDT_CHECK_PACKAGE([LIBXFCEGUI4], [libxfcegui4-1.0], [4.6.0])
-XDT_CHECK_PACKAGE([LIBEXO], [exo-0.3], [0.3.100])
+XDT_CHECK_PACKAGE([LIBEXO], [exo-0.3], [0.3.100], [],
+  [XDT_CHECK_PACKAGE([LIBEXO], [exo-1], [0.5.0])])
 XDT_CHECK_PACKAGE([CAIRO], [cairo], [1.0.0])
 
 dnl **********************
