--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -24,6 +24,7 @@ panel/panel-plugin-external.c
 panel/panel-plugin-external-46.c
 panel/panel-preferences-dialog.c
 panel/panel-preferences-dialog.glade
+panel/panel-tic-tac-toe.c
 panel/panel-window.c
 
 wrapper/main.c
