--- a/libxfce4panel/libxfce4panel-config.h.in
+++ b/libxfce4panel/libxfce4panel-config.h.in
@@ -28,6 +28,15 @@
 G_BEGIN_DECLS
 
 /**
+ * LIBXFCE4PANEL_VERSION:
+ *
+ * String with the full version of the panel.
+ *
+ * Since: 4.8
+ **/
+#define LIBXFCE4PANEL_VERSION ("@LIBXFCE4PANEL_VERSION@")
+
+/**
  * LIBXFCE4PANEL_MAJOR_VERSION:
  *
  * The major version number of the libxfce4panel library.
